[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "atl-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
]

[project.scripts]
atl = "atl_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
